--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,16 @@
-<p>
-  header works!
-</p>
+<header>
+  <div class='leftNav'>
+    <div class='wideScreenNav'>
+      <button mat-button>Card 1</button>
+    </div>
+    <div class='smallScreenNav'>
+      <mat-menu #menu='matMenu' [overlapTrigger]='false' xPosition='before'>
+        <button mat-menu-item>Card 1</button>
+      </mat-menu>
+      <button mat-button [matMenuTriggerFor]='menu'>Cards</button>
+    </div>
+  </div>
+  <div class='rightNav'>
+    
+  </div>
+</header>
