created right and left nav

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,6 +11,6 @@
     </div>
   </div>
   <div class='rightNav'>
-    <mat-icon>face</mat-icon>
+    <mat-icon>more_vert</mat-icon>
   </div>
 </header>
