--- a/src/app/left-nav/left-nav.component.html
+++ b/src/app/left-nav/left-nav.component.html
@@ -1,3 +1,9 @@
-<p>
-  left-nav works!
-</p>
+<div class='wideScreenNav'>
+  <button mat-button>Card 1</button>
+</div>
+<div class='smallScreenNav'>
+  <mat-menu #menu='matMenu' [overlapTrigger]='false' xPosition='before'>
+    <button mat-menu-item>Card 1</button>
+  </mat-menu>
+  <button mat-button [matMenuTriggerFor]='menu'>Cards</button>
+</div>
