fixed the right nav button layout

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -10,4 +10,9 @@ header {
     div {
         height: 100%;
     }
+    div.rightNav {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
