--- a/src/app/right-nav/right-nav.component.scss
+++ b/src/app/right-nav/right-nav.component.scss
@@ -1,3 +1,6 @@
-mat-button-icon {
+button.mat-icon-button {
     font-size: 2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
