added mat-stepper, and all the steps to the golf loader

--- a/src/app/course-loader/course-loader.component.html
+++ b/src/app/course-loader/course-loader.component.html
@@ -1,3 +1,11 @@
-<p>
-  course-loader works!
-</p>
+<mat-horizontal-stepper linear>
+  <mat-step label='Find Course' >
+    <button mat-button matStepperNext color='primary' >FIND COURSES</button>
+  </mat-step>
+  <mat-step label='Choose Course' >
+    <button mat-button matStepperNext color='primary' >CHOOSE COURSE</button>
+  </mat-step>
+  <mat-step label='Choose Teetype' >
+    <button mat-button color='primary' >CREATE COURSE</button>
+  </mat-step>
+</mat-horizontal-stepper>
