made the zipcode required in the template

--- a/src/app/find-course-form/find-course-form.component.html
+++ b/src/app/find-course-form/find-course-form.component.html
@@ -5,7 +5,8 @@
           type='number'
           placeholder='Zipcode'
           matInput
-          [errorStateMatcher]='matcher' >
+          [errorStateMatcher]='matcher'
+          required >
     <mat-error *ngIf='findCourseForm.controls.zipcode.hasError("range")' >
       5 digit zipcodes only
     </mat-error>
