--- a/src/app/find-course-form/find-course-form.component.html
+++ b/src/app/find-course-form/find-course-form.component.html
@@ -14,4 +14,8 @@
       Zipcode is required
     </mat-error>
   </mat-form-field>
+  <button mat-button
+      matStepperNext
+      color='primary'
+      (click)='searchCourses()' >FIND COURSES</button>
 </form>
