--- a/src/app/course-loader/course-loader.component.html
+++ b/src/app/course-loader/course-loader.component.html
@@ -44,6 +44,7 @@
               (click)='selectCourse(course.value)' >CHOOSE COURSE</button>
     </form>
   </mat-step>
+  <!-- todo: implement Choose tee-type step -->
   <mat-step label='Choose Tee-Type' [stepControl]='selectTeeTypeForm' >
     <form [formGroup]='selectTeeTypeForm'>
       <button mat-button 
