added the template for the page-not-found component and it doesn't need style

--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,3 +1,11 @@
-<p>
-  page-not-found works!
-</p>
+<mat-card>
+  <mat-card-title>
+    Error #404
+  </mat-card-title>
+  <img mat-card-img src='../../assets/images/error_message.jpg' >
+  <mat-card-actions>
+    <button mat-button routerLink='/new-card'>
+      Go Back To Home Page
+    </button>
+  </mat-card-actions>
+</mat-card>
