changed the right-nav so that it would show a mat-dialog for the item clicked.

--- a/src/app/right-nav/right-nav.component.html
+++ b/src/app/right-nav/right-nav.component.html
@@ -2,8 +2,7 @@
   <mat-icon>more_vert</mat-icon>
 </button>
 <mat-menu #appMenu='matMenu'>
-  <button mat-menu-item>Start New Card</button>
-  <button mat-menu-item>Clear Current Card</button>
+  <button mat-menu-item *ngFor='let item of menuItems' (click)='openDialog(item.component)' >{{item.text}}</button>
   <button mat-menu-item>Feedback</button>
   <button mat-menu-item>Help</button>
 </mat-menu>
