--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,21 @@
-<p>
-  login works!
-</p>
+<mat-card>
+  <mat-card-title>Login</mat-card-title>
+  <mat-card-content>
+    <mat-form-field>
+      <input matInput
+        placeholder="email"
+        type="email"
+        [ngModel]="email" >
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput
+        placeholder="password"
+        type="password"
+        [ngModel]="password" >
+    </mat-form-field>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button (click)='login()'>Login</button>
+    <button mat-button (click)='openNewUserDialog()'>Not a User?</button>
+  </mat-card-actions>
+</mat-card>
