--- a/src/app/new-user/new-user.component.html
+++ b/src/app/new-user/new-user.component.html
@@ -1,3 +1,34 @@
-<p>
-  new-user works!
-</p>
+<h2 mat-dialog-title>New User</h2>
+<mat-dialog-content>
+    <mat-form-field>
+      <input matInput required
+        placeholder='Email'
+        type='email'
+        name='email'
+        [(ngModel)]='email' >
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput required
+        placeholder='Name'
+        type='text'
+        name='name'
+        [(ngModel)]='password' >
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput required
+        placeholder='Password'
+        type='password'
+        name='password'
+        [(ngModel)]='password' >
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput
+        placeholder='Handicap'
+        type='number'
+        name='handicap'
+        [(ngModel)]='handicap' >
+      <mat-hint>
+        Leave empty if you don't know your handicap.
+      </mat-hint>
+    </mat-form-field>
+</mat-dialog-content>
