added add player button and function

--- a/src/app/score-card/score-card.component.html
+++ b/src/app/score-card/score-card.component.html
@@ -30,3 +30,9 @@
     </div>
   </header>
 </mat-card>
+<button *ngIf="game"
+  mat-raised-button
+  color="primary"
+  (click)="addPlayer()" >
+  Add player
+</button> 
