--- a/src/app/score-card/score-card.component.html
+++ b/src/app/score-card/score-card.component.html
@@ -29,6 +29,7 @@
       <div>total Score</div>
     </div>
   </header>
+  <golf-player-row *ngFor="let player of players" ></golf-player-row>
 </mat-card>
 <button *ngIf="game"
   mat-raised-button
