added player as an @Input() for player-row.component

--- a/src/app/score-card/score-card.component.html
+++ b/src/app/score-card/score-card.component.html
@@ -29,7 +29,7 @@
       <div>total Score</div>
     </div>
   </header>
-  <golf-player-row *ngFor="let player of players" ></golf-player-row>
+  <golf-player-row *ngFor="let player of players" [player]="player" ></golf-player-row>
 </mat-card>
 <button *ngIf="game"
   mat-raised-button
