--- a/src/app/player-row/row.style.scss
+++ b/src/app/player-row/row.style.scss
@@ -1,7 +1,10 @@
 .nameHole {
-    width: 15%;
+    width: 12%;
 }
 .holeCont {
     width: 80%;
     display: flex;
+}
+.scoreHole {
+    width: 8%;
 }
