added the gameId as an input to player-row

--- a/src/app/score-card/score-card.component.html
+++ b/src/app/score-card/score-card.component.html
@@ -33,7 +33,8 @@
   <golf-player-row 
     *ngFor="let player of players"
     [player]="player"
-    [cellWidth]="getCellWidth()" >
+    [cellWidth]="getCellWidth()"
+    [gameId]="gameId" >
   </golf-player-row>
 </mat-card>
 <button *ngIf="game"
