added end game button and defined endGame() method on score-card.comp

--- a/src/app/score-card/score-card.component.html
+++ b/src/app/score-card/score-card.component.html
@@ -43,3 +43,9 @@
   (click)="addPlayer()" >
   Add player
 </button> 
+<button *ngIf="game"
+  mat-raised-button
+  color="secondary"
+  (click)="endGame()" >
+  End Game
+</button>
